add images and files folder to hold site documents

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		</header>
 
 		<div>
+			<img src="images/professional_pic.jpeg">
+		</div>
+
+		<div>
 			<h1>Gabe Austin | Teacher | Developer</h1>
 		</div>
 
