add links to resume and contact page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</header>
 
 		<div>
-			<img src="images/professional_pic.jpeg">
+			<img src="images/professional_pic.jpeg" alt="Picture of Gabriel Austin - Teacher - Developer">
 		</div>
 
 		<div>
@@ -29,7 +29,7 @@
 				Etiam neque tellus, sodales in sagittis in, facilisis sed nisl. Suspendisse pretium pellentesque mi, id pharetra velit tincidunt et. Sed dignissim commodo metus, vitae porta eros tincidunt vel. Nunc hendrerit, est sit amet vulputate imperdiet, ipsum neque malesuada massa, quis tincidunt tortor ante a nulla. In tempus erat dolor, et rutrum urna mattis vitae. Vestibulum pulvinar id mauris in molestie. Curabitur scelerisque tellus a ligula iaculis pulvinar. Suspendisse mauris odio, sodales eu pellentesque id, consectetur a odio. Nullam suscipit et sem nec lacinia. Praesent eget tellus rhoncus, elementum libero ornare, pretium nisi. Nullam tempor pretium finibus. Pellentesque nec laoreet sem. In tempus volutpat mattis. Maecenas maximus venenatis mi non vehicula. Proin et venenatis ipsum, ac aliquet metus.
 			</h3>
 
-			<h3>Interested in learning more about me? Here is my resume, and you can contact me here. Talk to you soon!</h3>
+			<h3>Interested in learning more about me? Here is my <a href="files/Computer_Science_Teacher.pdf" target="_blank">resume</a>, and you can contact me <a href="contact.html">here</a>. Talk to you soon!</h3>
 		</div>
 
 		<div>
