add social media links

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,16 @@
 		</div>
 
 		<div>
+			<h3>Social Media</h3>
+
+			<ul>
+				<li><a href="https://www.facebook.com/gabeaustin1" target="_blank"></a>Facebook</li>
+				<li><a href="https://www.instagram.com/austin.gabe/" target="_blank"></a>Instagram</li>
+				<li><a href="https://www.linkedin.com/in/gabrielaustin/" target="_blank"></a>LinkedIn</li>
+			</ul>
+		</div>
+
+		<div>
 			<form>
 				<label for="name">Your Name</label>
 				<label for="email">Your Email Address</label>
