--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,16 @@
 
 		<div>
 			<form>
-				<label for="name">Your Name</label>
-				<label for="email">Your Email Address</label>
-				<label for="message">Message to Gabe</label>
-				<textarea rows="5" cols="15" name="message" id="message"></textarea>
+				<label for="name">Your Name<span class="required">*</span></label>
+				<input type="text" id="name" name="name" required
+       minlength="3" maxlength="40" size="10">
+
+				<label for="email">Your Email Address<span class="required">*</span></label>
+				<input type="text" id="email" name="email" required
+       minlength="3" maxlength="60" size="10">
+
+				<label for="message">Message to Gabe<span class="required">*</span></label>
+				<input type="textarea" id="message" name="message" rows="5" cols="15" required size="10">
 			</form>
 		</div>
 
