add projects page & update footer on all pages

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
 		<div>
 			<footer>
-				&copy 2020 | Gabriel Austin
+				Gabriel Austin | gabriel.austin2019@gmail.com | 555-555-1234
 			</footer>
 		</div>
 
