add links to display pics

--- a/projects.html
+++ b/projects.html
@@ -13,24 +13,35 @@
 		</header>
 
 		<div>
-			<img src="images/professional_pic.jpeg" alt="Picture of Gabriel Austin - Teacher - Developer">
+			<h1>My Projects</h1>
 		</div>
 
 		<div>
-			<h1>Gabe Austin | Teacher | Developer</h1>
-		</div>
-
-		<div>
-			<h2>
-				In placerat commodo lobortis. Etiam vitae mi non magna viverra pretium id quis erat. Nullam.
-			</h2>
+			<img src="images/yes_were_open.jpg" />
 
 			<h3>
-				Etiam neque tellus, sodales in sagittis in, facilisis sed nisl. Suspendisse pretium pellentesque mi, id pharetra velit tincidunt et. Sed dignissim commodo metus, vitae porta eros tincidunt vel. Nunc hendrerit, est sit amet vulputate imperdiet, ipsum neque malesuada massa, quis tincidunt tortor ante a nulla. In tempus erat dolor, et rutrum urna mattis vitae. Vestibulum pulvinar id mauris in molestie. Curabitur scelerisque tellus a ligula iaculis pulvinar. Suspendisse mauris odio, sodales eu pellentesque id, consectetur a odio. Nullam suscipit et sem nec lacinia. Praesent eget tellus rhoncus, elementum libero ornare, pretium nisi. Nullam tempor pretium finibus. Pellentesque nec laoreet sem. In tempus volutpat mattis. Maecenas maximus venenatis mi non vehicula. Proin et venenatis ipsum, ac aliquet metus.
+				Nam sodales odio mauris, vulputate mattis arcu ullamcorper vitae. Cras eleifend, ligula ut gravida tempor, risus enim mattis nulla, eget scelerisque tortor erat et eros. Etiam fermentum in enim a semper. Donec purus massa, faucibus vitae nunc eu, maximus placerat massa. Pellentesque ante odio, lobortis vel urna at, pretium tincidunt mi. Nunc vel vestibulum arcu. Ut mollis congue erat nec facilisis. Nullam sagittis posuere dictum. Curabitur malesuada, enim at pretium pulvinar, mauris eros dapibus libero, non tincidunt mauris libero maximus ante.
 			</h3>
-
-			<h3>Interested in learning more about me? Here is my <a href="files/Computer_Science_Teacher.pdf" target="_blank">resume</a>, and you can contact me <a href="contact.html">here</a>. Talk to you soon!</h3>
 		</div>
+
+
+		<div>
+			<img src="images/southern_kitchen.jpg" />
+
+			<h3>
+				Phasellus at massa id dui dignissim facilisis sagittis pellentesque turpis. Maecenas posuere tristique urna in bibendum. Vivamus ac felis orci. Sed at ante ipsum. Cras egestas orci sed metus porttitor rutrum. Nulla efficitur consequat sollicitudin. Cras mattis nibh justo, vehicula euismod metus condimentum at. Quisque elementum purus in enim aliquet bibendum. Maecenas ornare mauris ut eros efficitur vestibulum. Nulla feugiat euismod egestas. Aenean volutpat consequat massa, non egestas elit lacinia nec. Quisque convallis dolor id lorem fringilla, pretium venenatis nibh aliquet.
+			</h3>
+		</div>
+
+
+		<div>
+			<img src="images/women_eating.jpg" />
+
+			<h3>
+				Pellentesque ac justo quis lorem rhoncus blandit vel tincidunt nibh. Suspendisse congue risus sed porttitor commodo. Ut aliquam tempor auctor. Fusce in tincidunt sem. Cras auctor orci in lectus aliquam aliquam. Cras luctus orci eu est congue, sed laoreet sem faucibus. Etiam eget arcu non diam sodales lobortis. Sed fermentum ligula ac eleifend dignissim. Etiam dignissim dignissim dui. In tempor fringilla mauris facilisis fringilla. Maecenas interdum tellus non ultrices pellentesque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque commodo mollis massa, nec maximus elit lacinia quis. Mauris nunc sem, suscipit ut leo at, accumsan pretium metus.
+			</h3>
+		</div>
+
 
 		<div>
 			<footer>
