add links to menu bar

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,10 @@
 	<body>
 		<header>
 			<ul>
-				<li>About</li>
-				<li>Projects</li>
-				<li>Contact</li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</header>
 
