fix lyrics on about page

--- a/about.html
+++ b/about.html
@@ -82,57 +82,43 @@
 					<!-- Put a form here -->
 			</ul>
 
-
-
-
-					
-
-
-
-			</ul>
-
 			<!-- Have lyrics scrolling -->
 			<h4>
-				I say the same thing twice I'm awkward when I speak
-				Ain't got the perfect smile don't turn heads on my street
-				Trying to be a superstar like everybody else
-				But being myself is something I do well
-				Whatever you do, do it good
-				Whatever you do, do, do, do, lord, lord, lord
-				Do it good, alright
-				Express yourself, express yourself, whoa do it
-				See it's not what you look like, when you doing what you doing
-				Express yourself, whoa do it
-				I don't make the papers I am far from JLS (JLS)
-				Ain't got the x factor I'm not what they expect (Listen)
-				But it won't be long before my turn is next, to express
-				Now without you expect
-				See whatever I do, I do it good
-				Do, do, do, do, do, do, do
-				So whatever you do, do, do, do, lord, lord, lord
-				Do it good,
-				Express yourself, express yourself, whoa do it
-				See it's not what you look like, when you doing what you doing
-				Express yourself, whoa do it
-				Loose myself in time, tearing too high
-				Shooting what you got, whoa
-				It's nothing wrong with perfect and perfect
-				Now it's your time to shine
-				Express yourself, click your fingers now
-				Express yourself, come on,
-				See it's not what you look like, when you doing what you doing
-				Express yourself, whoa do it
-				See it's not what you look like, when you doing what you doing
-				Express yourself, come on now, yeah, come on, now,
-				Come on now, yeah, come on, now,
-				Come on now, yeah, come on, now,
-				Come on now, yeah, come on, now
+				I say the same thing twice I'm awkward when I speak <br>
+				Ain't got the perfect smile don't turn heads on my street <br>
+				Trying to be a superstar like everybody else <br>
+				But being myself is something I do well <br>
+				Whatever you do, do it good <br>
+				Whatever you do, do, do, do, lord, lord, lord <br>
+				Do it good, alright <br>
+				Express yourself, express yourself, whoa do it <br>
+				See it's not what you look like, when you doing what you doing <br>
+				Express yourself, whoa do it <br>
+				I don't make the papers I am far from JLS (JLS) <br>
+				Ain't got the x factor I'm not what they expect (Listen) <br>
+				But it won't be long before my turn is next, to express <br>
+				Now without you expect <br>
+				See whatever I do, I do it good <br>
+				Do, do, do, do, do, do, do <br>
+				So whatever you do, do, do, do, lord, lord, lord <br>
+				Do it good, <br>
+				Express yourself, express yourself, whoa do it <br>
+				See it's not what you look like, when you doing what you doing <br>
+				Express yourself, whoa do it <br>
+				Loose myself in time, tearing too high <br>
+				Shooting what you got, whoa <br>
+				It's nothing wrong with perfect and perfect <br>
+				Now it's your time to shine <br>
+				Express yourself, click your fingers now <br>
+				Express yourself, come on, <br>
+				See it's not what you look like, when you doing what you doing <br>
+				Express yourself, whoa do it <br>
+				See it's not what you look like, when you doing what you doing <br>
+				Express yourself, come on now, yeah, come on, now, <br>
+				Come on now, yeah, come on, now, <br>
+				Come on now, yeah, come on, now, <br>
+				Come on now, yeah, come on, now <br>
 			</h4>
-
-
-
-
-		</div>
 
 		<div>
 			<footer>
